* DefaultFactory: Converted new Character to Character.valueOf